--- a/Tactile-Viewer/package.json
+++ b/Tactile-Viewer/package.json
@@ -12,6 +12,7 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "three": "^0.181.1",
     "three-mesh-bvh": "^0.9.2"
   }
